--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -223,5 +223,11 @@ section {
   width: 100%;
   -webkit-flex: 1 1 0%;
   flex: 1 1 0%;
+  overflow: hidden;
+}
+
+section > div {
+  width: 100%;
+  height: 2000px;
   background: #f5f5f5;
 }
