--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -31,5 +31,10 @@ header {
 section {
     width: 100%;
     @include flex;
-    background: #f5f5f5;
+    overflow: hidden;
+    >div {
+        width: 100%;
+        height: 2000px;
+        background: #f5f5f5;
+    }
 }
