--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,7 +34,119 @@ section {
     overflow: hidden;
     >div {
         width: 100%;
-        height: 2000px;
         background: #f5f5f5;
+        .swiper-container {
+            width: 100%;
+            height: pxTorem(200px);
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        #nav {
+            width: 100%;
+            @include box_flex;
+            @include flexWrap;
+            background: #fff;
+            margin-bottom: pxTorem(10px);
+            dl {
+                width: 25%;
+                height: pxTorem(80px);
+                @include box_flex;
+                @include direction(column);
+                @include justify;
+                @include align;
+                dt {
+                    width: 55%;
+                    height: pxTorem(50px);
+                    background: #53ab3a;
+                    border-radius: pxTorem(100px)
+                }
+            }
+        }
+        #con {
+            width: 100%;
+            background: #fff;
+            .con-nav {
+                width: 100%;
+                height: pxTorem(44px);
+                @include box_flex;
+                li {
+                    @include flex;
+                    height: 100%;
+                    line-height: pxTorem(44px);
+                    text-align: center;
+                    border-bottom: pxTorem(1px) solid #ccc;
+                }
+            }
+            .con-bao {
+                width: 100%;
+                @include box_flex;
+                @include direction(column);
+                @include justify;
+                @include align;
+                .ten {
+                    width: 90%;
+                    height: pxTorem(120px);
+                    margin-top: pxTorem(10px);
+                    @include box_flex;
+                    @include justify(space-between);
+                    @include align;
+                    padding: 0 pxTorem(10px);
+                    @include sizing;
+                    >img {
+                        width: pxTorem(110px);
+                        height: pxTorem(110px);
+                    }
+                    >div {
+                        @include flex;
+                        @include box_flex;
+                        @include direction(column);
+                        margin: 0 pxTorem(10px);
+                        >div {
+                            margin: pxTorem(3px) 0;
+                        }
+                        >div:nth-child(1) {
+                            font-size: pxTorem(18px)
+                        }
+                        >div:nth-child(2) {
+                            @include box_flex;
+                            @include justify(space-between);
+                            @include align;
+                            >span {
+                                padding: pxTorem(2px);
+                                background: #f90;
+                                color: #fff;
+                            }
+                            >div {
+                                >span {
+                                    font-size: pxTorem(16px);
+                                    color: #f90;
+                                    font-weight: bold;
+                                }
+                            }
+                        }
+                        >div:nth-child(3) {
+                            >span {
+                                margin-right: pxTorem(5px)
+                            }
+                        }
+                        >div:nth-child(4) {
+                            @include box_flex;
+                            @include justify(space-between);
+                            @include align;
+                            >div {
+                                >span {
+                                    margin-right: pxTorem(5px)
+                                }
+                            }
+                        }
+                    }
+                    .no {
+                        visibility: hidden;
+                    }
+                }
+            }
+        }
     }
 }
